BookBond: improve Android compatibility